refactor: renaming and refactoring the code
