# docs/swagger.json
@@ -289,7 +289,7 @@
                     "201": {
                         "description": "Created",
                         "schema": {
-                            "$ref": "#/definitions/db.TransferTransactionResult"
+                            "$ref": "#/definitions/db.TransferTxResult"
                         }
                     }
                 }
@@ -529,7 +529,7 @@
                 }
             }
         },
-        "db.TransferTransactionResult": {
+        "db.TransferTxResult": {
             "type": "object",
             "properties": {
                 "from_account": {
